chore: remove not needed print

--- a/Projeto_01_Classificação_de_crédito.ipynb
+++ b/Projeto_01_Classificação_de_crédito.ipynb
@@ -3260,32 +3260,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 177,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XvNZrwkKtkPX",
-        "outputId": "487116e1-8e85-458a-cc3f-5be8268869af"
+        "id": "XvNZrwkKtkPX"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{10: {'classifier': RandomForestClassifier(n_estimators=10), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9723756906077348}, 15: {'classifier': RandomForestClassifier(n_estimators=15), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 20: {'classifier': RandomForestClassifier(n_estimators=20), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.973816958923853}, 25: {'classifier': RandomForestClassifier(n_estimators=25), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.973816958923853}, 30: {'classifier': RandomForestClassifier(n_estimators=30), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 35: {'classifier': RandomForestClassifier(n_estimators=35), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9726159019937545}, 40: {'classifier': RandomForestClassifier(n_estimators=40), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9740571703098727}, 45: {'classifier': RandomForestClassifier(n_estimators=45), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9735767475378333}, 50: {'classifier': RandomForestClassifier(n_estimators=50), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.973816958923853}, 55: {'classifier': RandomForestClassifier(n_estimators=55), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9740571703098727}, 60: {'classifier': RandomForestClassifier(n_estimators=60), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.973816958923853}, 65: {'classifier': RandomForestClassifier(n_estimators=65), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9735767475378333}, 70: {'classifier': RandomForestClassifier(n_estimators=70), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 75: {'classifier': RandomForestClassifier(n_estimators=75), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 80: {'classifier': RandomForestClassifier(n_estimators=80), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9740571703098727}, 85: {'classifier': RandomForestClassifier(n_estimators=85), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 90: {'classifier': RandomForestClassifier(n_estimators=90), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9745375930819121}, 95: {'classifier': RandomForestClassifier(n_estimators=95), 'y_pred': array([False, False, False, ..., False, False, False]), 'acc': 0.9733365361518136}}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Calculando a acuracia\n",
         "for estimator, model in classifiers.items():\n",
         "  y_pred = model['classifier'].predict(x_test)\n",
         "  classifiers[estimator]['y_pred'] = y_pred\n",
         "  acc = metrics.accuracy_score(y_test, y_pred)\n",
-        "  classifiers[estimator]['acc'] = acc\n",
-        "\n",
-        "print(classifiers)"
+        "  classifiers[estimator]['acc'] = acc"
       ]
     },
     {
